# Anthena

./: .env.example  .gitignore  Dockerfile  PROJECT_DOCUMENTATION.md  README.md  athena-scope-and-v2-additions.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  config.py  main.py
backend/agent/: __init__.py  graph.py  nodes.py  state.py
backend/agent/tools/: __init__.py  arxiv_tool.py  document_tool.py  web_search.py
backend/database/: __init__.py  crud.py  models.py  session.py
backend/ingestion/: __init__.py  chunker.py  embedder.py  loader.py
backend/routes/: __init__.py  conversations.py  query.py  upload.py
evaluation/: eval_agent.py  test_cases.json
frontend/: app.py
tests/: conftest.py  test_agent.py  test_ingestion.py  test_routes.py  test_tools.py
