[project]
name = "athena"
version = "1.0.0"
description = "Production-grade agentic RAG system with intelligent tool routing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # LLM & Agent Framework
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",

    # Vector Store
    "langchain-chroma>=0.2.0",
    "chromadb>=0.5.0",

    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Frontend
    "streamlit>=1.40.0",

    # Document Processing
    "pypdf>=5.0.0",

    # Search Tools
    "duckduckgo-search>=6.0.0",
    "arxiv>=2.1.0",

    # Configuration
    "pydantic-settings>=2.6.0",

    # HTTP
    "httpx>=0.27.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
